--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -9,7 +9,7 @@ Before bootstrapping a new [environment](terminology.html#environment) we recomm
 ---
 ## <a id="bosh-init"></a> bosh-init
 
-bosh-init is tool used for creating and updating the Director (its VM and persistent disk) in an environment.
+bosh-init is a tool used for creating and updating the Director (its VM and persistent disk) in an environment.
 
 ---
 ## <a id="cli"></a> Command Line Interface (CLI)
