--- a/init-azure.html.md.erb
+++ b/init-azure.html.md.erb
@@ -4,6 +4,12 @@ title: Initializing BOSH environment on Azure
 
 This document shows how to initialize new [environment](terminology.html#environment) on Microsoft Azure.
 
+If you do not have an Azure account, [create one](https://azure.microsoft.com/en-us/pricing/free-trial/).
+
+Then follow this [guide](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/get-started/create-service-principal.md) to create your Azure service principal.
+
+We strongly recommend you to use Azure template [bosh-setup](https://azure.microsoft.com/en-us/documentation/templates/bosh-setup/) to initialize the new environment on Microsoft Azure.
+
 ## <a id="create-manifest"></a>Step 1: Create a Deployment Manifest
 
 1. Create a deployment directory.
@@ -46,10 +52,12 @@ networks:
   subnets:
   - range: 10.0.0.0/24
     gateway: 10.0.0.1
-    dns: [8.8.8.8]
+    dns: [168.63.129.16]
     cloud_properties:
       virtual_network_name: VNET-NAME # <--- Replace
       subnet_name: SUBNET-NAME # <--- Replace
+- name: public
+  type: vip
 
 jobs:
 - name: bosh
@@ -72,6 +80,8 @@ jobs:
   - name: private
     static_ips: [10.0.0.4]
     default: [dns, gateway]
+  - name: public
+    static_ips: [PUBLIC-IP]}
 
   properties:
     nats:
@@ -133,9 +143,9 @@ jobs:
       client_secret: CLIENT-SECRET # <--- Replace
       resource_group_name: RESOURCE-GROUP-NAME # <--- Replace
       storage_account_name: STORAGE-ACCOUNT-NAME # <--- Replace
-      storage_access_key: STORAGE-ACCESS-KEY # <--- Replace
+      default_security_group: DEFAULT-SECURITY-GROUP # <--- Replace
       ssh_user: vcap
-      ssh_certificate: SSH-CERTIFICATE # <--- Replace
+      ssh_public_key: SSH-PUBLIC-KEY # <--- Replace
 
     agent: {mbus: "nats://nats:nats-password@10.0.0.4:4222"}
 
@@ -145,12 +155,12 @@ cloud_provider:
   template: {name: cpi, release: bosh-azure-cpi}
 
   ssh_tunnel:
-    host: 10.0.0.4
+    host: PUBLIC-IP
     port: 22
     user: vcap
-    private_key: ./bosh.pem # Path relative to this manifest file
+    private_key: ./bosh # Path relative to this manifest file
 
-  mbus: "https://mbus:mbus-password@10.0.0.4:6868"
+  mbus: "https://mbus:mbus-password@PUBLIC-IP:6868"
 
   properties:
     azure: *azure
@@ -182,14 +192,18 @@ To prepare your Azure environment find out and/or create any missing resources i
 
 - Replace `SUBNET-NAME` (e.g. 'bosh'). Deployment manifest assumes that the subnet is `10.0.0.0/24` and Director VM will be placed at `10.0.0.4`.
 
-- Replace `SSH-CERTIFICATE` with a generated SSH certificate (found in `./bosh.crt`):
+- Replace `DEFAULT-SECURITY-GROUP` (e.g. 'nsg-bosh') with the name of created network security group for BOSH.
+
+- Replace `PUBLIC-IP` (e.g. '12.34.56.78') with the IP address of created public IP for BOSH.
+
+- Replace `SSH-PUBLIC-KEY` with a generated SSH public key (found in `./bosh.pub`):
 
     <pre class="terminal">
-    $ openssl genrsa -out ./bosh.pem 2048
-    $ openssl req -new -x509 -days 365 -key ./bosh.pem -out ./bosh.crt
+    $ ssh-keygen -t rsa -f ~/bosh -P "" -C ""
+    $ chmod 400 ~/bosh
     </pre>
 
-    Keep `bosh.pem` next to `bosh.yml` as it will be used by bosh-init during the deploy.
+    Keep `bosh` next to `bosh.yml` as it will be used by bosh-init during the deploy.
 
 ---
 ## <a id="deploy"></a> Step 3: Deploy
@@ -222,7 +236,7 @@ To prepare your Azure environment find out and/or create any missing resources i
     No deployments
     </pre>
 
-1. Save the deployment state file and `bosh.pem` left in your deployment directory so you can later update/delete your Director. See [Deployment state](using-bosh-init.html#deployment-state) section of 'Using bosh-init' for more details.
+1. Save the deployment state file and `bosh` left in your deployment directory so you can later update/delete your Director. See [Deployment state](using-bosh-init.html#deployment-state) section of 'Using bosh-init' for more details.
 
 ---
 [Back to Table of Contents](index.html#install)
