--- a/azure-cpi.html.md.erb
+++ b/azure-cpi.html.md.erb
@@ -138,6 +138,45 @@ properties:
 ```
 
 ---
+## <a id='cloud-config'></a> Example Cloud Config
+
+```yaml
+azs:
+- name: z1
+- name: z2
+
+vm_types:
+- name: default
+  cloud_properties:
+    instance_type: Standard_A2
+
+disk_types:
+- name: default
+  disk_size: 10_240
+
+networks:
+- name: default
+  type: manual
+  subnets:
+  - range: 10.10.0.0/24
+    gateway: 10.10.0.1
+    dns: [8.8.8.8]
+    azs: [z1, z2]
+    cloud_properties:
+      virtual_network_name: boshnet
+      subnet_name: boshsub
+- name: vip
+  type: vip
+
+compilation:
+  workers: 5
+  reuse_compilation_vms: true
+  az: z1
+  vm_type: default
+  network: default
+```
+
+---
 ## <a id="errors"></a> Errors
 
 ```
