Add multi-homed VMs
Signed-off-by: Marco Voelz <marco.voelz@sap.com>

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -85,6 +85,7 @@ See [Recent Additions and Updates](recent.html).
     * [Extended Registry configuration](openstack-registry.html)
     * [Human-readable VM names](openstack-human-readable-vm-names.html)
     * [Validating self-signed OpenStack endpoints](openstack-self-signed-endpoints.html)
+    * [Multi-homed VMs](openstack-multiple-networks.html)
 * [vSphere](vsphere-cpi.html)
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
     * [Storage DRS and vMotion Support](vsphere-vmotion-support.html)
