--- a/openstack-self-signed-endpoints.html.md.erb
+++ b/openstack-self-signed-endpoints.html.md.erb
@@ -26,4 +26,6 @@ When your OpenStack is using a self-signed certificate, you want to enable the O
 ---
 [Back to Table of Contents](index.html#cpi-config)
 
+Next: [Multi-homed VMs](openstack-multiple-networks.html)
+
 Previous: [Using human-readable VM names](openstack-human-readable-vm-names.html)
