mention links in toc

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -69,6 +69,7 @@ See [Recent Additions and Updates](recent.html).
     * [Addons](runtime-config.html#addons)
 * [Trusted certificates](trusted-certs.html)
 * [Manifest v2 schema](manifest-v2.html)
+    * [Links](links.html)
     * [Renaming/migrating instance groups](migrated-from.html)
 * [Persistent and orphaned disks](persistent-disks.html)
 
