mention syslog addon

--- a/director-users-uaa.html.md.erb
+++ b/director-users-uaa.html.md.erb
@@ -69,7 +69,7 @@ In this configuration the Director is configured to delegate user management to 
 
     <p class="note">Note: Make sure UAA URL corresponds to the Director and UAA certificate subjects.</p>
 
-    To configure UAA to use LDAP, SAML, etc. see [uaa release job properties](http://bosh.io/jobs/uaa?source=github.com/cloudfoundry/uaa-release).
+    To configure UAA to use LDAP, SAML, etc. see [uaa release job properties](https://bosh.io/jobs/uaa?source=github.com/cloudfoundry/uaa-release).
 
 1. Configure the Director Postgres server to have an additional database called `uaa`:
 
