--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -67,6 +67,7 @@ See [Recent Additions and Updates](recent.html).
     * [VM anti-affinity](vm-anti-affinity.html)
 * [Runtime config](runtime-config.html)
     * [Addons](runtime-config.html#addons)
+    * [Common addons](addons-common.html)
 * [Trusted certificates](trusted-certs.html)
 * [Manifest v2 schema](manifest-v2.html)
     * [Links](links.html)
