link to common addons

--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,10 @@
 Title: Recent Additions and Updates
 ---
 
+* [Common addons](addons-common.html)
+
+---
+
 * [Manifest v2](manifest-v2.html)
 * [Cloud config](cloud-config.html)
 * [AZs](azs.html)
