--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -99,3 +99,5 @@ addons:
       ca_cert: ...
     syslog_drain_ips: [10.10.0.20]
 ```
+
+See [common addons list](addons-common.html) for several examples.
