--- a/cloud-config.html.md.erb
+++ b/cloud-config.html.md.erb
@@ -167,7 +167,7 @@ vm_types:
 - [See vCloud CPI VM types cloud properties](vcloud-cpi.html#resource-pools)
 
 ---
-## <a id='vm-extensions'></a> VM Extenstions Block
+## <a id='vm-extensions'></a> VM Extensions Block
 
 <p class="note">Note: This feature is available with bosh-release v255.4+.</p>
 
