vm_types's example has `availability_zone`
`vm_types` example is clearly from AWS, but it is flawed: it lacks the required `availability_zone` property.
Now it has that property.

--- a/cloud-config.html.md.erb
+++ b/cloud-config.html.md.erb
@@ -156,7 +156,7 @@ Example:
 ```yaml
 vm_types:
 - name: default
-  cloud_properties: {instance_type: m1.small}
+  cloud_properties: {instance_type: m1.small, availability_zone: us-east-1c}
 ```
 
 ### <a id='vm-types-cloud-properties'></a> CPI Specific `cloud_properties`
