mention ruby and gem are on path

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -20,6 +20,8 @@ Make sure following packages are installed:
 $ sudo apt-get install build-essential ruby ruby-dev libxml2-dev libsqlite3-dev libxslt1-dev libpq-dev libmysqlclient-dev zlib1g-dev
 </pre>
 
+Make sure `ruby` and `gem` binaries are on your path before continuing.
+
 ### Prerequisites on CentOS
 
 Make sure following packages are installed:
