--- a/aws-instance-storage.html.md.erb
+++ b/aws-instance-storage.html.md.erb
@@ -4,7 +4,7 @@ title: Using Instance Storage
 
 <p class="note">Note: This feature is available with bosh-aws-cpi v32+ and only for releases deployed with ? stemcells.</p>
 
-Certain [instance types](https://aws.amazon.com/ec2/instance-types/) have access to instance storage. All BOSH managed VMs have to store some ephemeral data such as release jobs, packages, logs and other scrath data. First instance storage disk is used if possible; otherwise, separate EBS volume is created as an ephemeral disk.
+Certain [instance types](https://aws.amazon.com/ec2/instance-types/) have access to instance storage. All BOSH managed VMs have to store some ephemeral data such as release jobs, packages, logs and other scratch data. First instance storage disk is used if possible; otherwise, a separate EBS volume is created as an ephemeral disk.
 
 Applications may need access to all instance storage disks. In that case separate EBS volume will always be created to store ephemeral data. To enable access to all instance storage disks add `raw_instance_storage: true`:
 
