--- a/addons-common.html.md.erb
+++ b/addons-common.html.md.erb
@@ -23,7 +23,7 @@ addons:
     transport: tcp
     port: 38559
     tls_enabled: true
-    permitted_peer: *.papertrail.com
+    permitted_peer: "*.papertrail.com"
     ca_cert: |
       -----BEGIN CERTIFICATE-----
       MIIClTCCAf4CCQDc6hJtvGB8RjANBgkqhkiG9w0BAQUFADCBjjELMAk...
@@ -76,9 +76,9 @@ addons:
   properties:
     users:
     - name: nessus
-      public_key: "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCyKb5nLZv...oYPkLlOGyAFLk6Id75Xr hostname"
+      public_key: "ssh-rsa AAAAB3NzaC1yc2EAQCyKb5nLZv...oYPkLlOGyAFLk6Id75Xr hostname"
     - name: teleport
-      public_key: "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAGJKJJJKkb5nLZv...dkjfLlOGyAFLk6kfbgYG hostname"
+      public_key: "ssh-rsa AAAAB3NzaC1yc2dfgJKkb5nLZv...dkjfLlOGyAFLk6kfbgYG hostname"
 ```
 
 See [user_add job](https://bosh.io/jobs/user_add?source=github.com/cloudfoundry/os-conf-release).
