--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -126,7 +126,7 @@ See [Recent Additions and Updates](recent.html).
         * [Post-start script](post-start.html)
         * [Post-deploy script](post-deploy.html)
         * [Drain script](drain.html)
-    * [Scheduled Tasks](scheduled-tasks.html)
+    * [Scheduled processes](scheduled-procs.html)
 * What is a package?
     * [Creating a package](packages.html)
     * Relationship to release blobs
