use correct prop for syslog example

--- a/addons-common.html.md.erb
+++ b/addons-common.html.md.erb
@@ -19,7 +19,7 @@ addons:
   - name: syslog_forwarder
     release: syslog
   properties:
-    destination_address: logs4.papertrail.com
+    address: logs4.papertrail.com
     transport: tcp
     port: 38559
     tls_enabled: true
