Liberty works well.

--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -163,9 +163,9 @@ cloud_provider:
 ### <a id="prerequisites"></a> Prerequisites
 
 1. An OpenStack environment running one of the following supported releases:
-    * [Icehouse](http://www.openstack.org/software/icehouse)
     * [Juno](http://www.openstack.org/software/juno)
     * [Kilo](http://www.openstack.org/software/kilo)
+    * [Liberty](http://www.openstack.org/software/liberty)
 
     <p class="note">Note: Juno has a <a href="https://bugs.launchpad.net/nova/+bug/1396854">bug</a> that prevents BOSH to assign specific IPs to VMs. You have to apply a Nova patch to avoid this problem.</p>
 
